--- a/client/templates/posts/post_page.html
+++ b/client/templates/posts/post_page.html
@@ -1,5 +1,10 @@
 <template name="postPage">
   <div class="page post-page">
     {{> postItem}}
+    <ul class="comments">
+      {{#each comments}}
+        {{> commentItem}}
+      {{/each}}
+    </ul>
   </div>
 </template>
